# openapi-schema-validator

./: pyproject.toml  setup.cfg
